Build basic page structure and nav
This revision adds the page's four sections as stubs,
creates the header nav with links to the sections,
and puts placeholder heading and text in the welcome section.
The page title and logo are now set to CloudBox.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Info</title>
+    <title>CloudBox</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">CloudBox</div>
+        <nav>
+            <a href="#welcome">Welcome</a>
+            <a href="#info">Info</a>
+            <a href="#testimonial">Testimonial</a>
+            <a href="#sign-up">Sign Up!</a>
+        </nav>
+    </header>
+    <main>
+        <section id="welcome">
+            <h1>Literal Cloud Storage</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maxime omnis maiores nemo eligendi dolorum, dolorem dicta ratione perferendis culpa enim corporis debitis vitae, similique id? Laboriosam id quasi dolorem?
+            </p>
+        </section>
+        <section id="info">
+
+        </section>
+        <section id="testimonial">
+
+        </section>
+        <section id="sign-up">
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
