Draft and organize welcome page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
     </header>
     <main>
         <section id="welcome">
-            <h1>Literal Cloud Storage</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis maxime omnis maiores nemo eligendi dolorum, dolorem dicta ratione perferendis culpa enim corporis debitis vitae, similique id? Laboriosam id quasi dolorem?
-            </p>
+            <div class="blurb-wrapper">
+                <h1>Literal Cloud Storage</h1>
+                <p>
+                    Store your own clouds, or rent from our premium selection.
+                    Keep your clouds safe in our world-class storage facilities,
+                    and you can be sure that no one will steal your thunder!
+                </p>
+                <button class="sign-up-button">Sign Up</button>
+            </div>
+            <div class="image-wrapper">
+                <img src="img/lightning.jpg">
+            </div>
         </section>
         <section id="info">
 
