--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
             </div>
         </section>
         <section id="info">
-
+            <div class="info-card">
+                <img src="img/cumulus.jpg" alt="puffy cumulus clouds">
+                <p><strong>Cumulus clouds</strong> keep their optimum fluffiness when stored in our CloudBox.</p>
+            </div>
+            <div class="info-card">
+                <img src="img/cirrus.jpg" alt="wispy cirrus clouds">
+                <p>Store your <strong>cirrus clouds</strong> with us! No is too high for our reach.</p>
+            </div>
+            <div class="info-card">
+                <img src="img/cumulonimbus.jpg" alt="cumulonimbus storm clouds">
+                <p>Your <strong>cumulonimbus clouds</strong> keep their charge in our cloud storage.</p>
+            </div>
+            <div class="info-card">
+                <img src="img/stratus.jpg" alt="stratus cloud layers">
+                <p>We pack your <strong>stratus clouds</strong> in neat layers with our wrinkle-free guarantee.</p>
+            </div>
         </section>
         <section id="testimonial">
 
