Style Info section and add header

--- a/index.html
+++ b/index.html
@@ -32,21 +32,24 @@
             </div>
         </section>
         <section id="info">
-            <div class="info-card">
-                <img src="img/cumulus.jpg" alt="puffy cumulus clouds">
-                <p><strong>Cumulus clouds</strong> keep their optimum fluffiness when stored in our CloudBox.</p>
-            </div>
-            <div class="info-card">
-                <img src="img/cirrus.jpg" alt="wispy cirrus clouds">
-                <p>Store your <strong>cirrus clouds</strong> with us! No is too high for our reach.</p>
-            </div>
-            <div class="info-card">
-                <img src="img/cumulonimbus.jpg" alt="cumulonimbus storm clouds">
-                <p>Your <strong>cumulonimbus clouds</strong> keep their charge in our cloud storage.</p>
-            </div>
-            <div class="info-card">
-                <img src="img/stratus.jpg" alt="stratus cloud layers">
-                <p>We pack your <strong>stratus clouds</strong> in neat layers with our wrinkle-free guarantee.</p>
+            <h1>For clouds of all sorts</h1>
+            <div class="card-wrapper">
+                <div class="info-card">
+                    <img src="img/cumulus.jpg" alt="puffy cumulus clouds">
+                    <p><strong>Cumulus</strong> clouds retain their optimum fluffiness when stored in CloudBox facilities.</p>
+                </div>
+                <div class="info-card">
+                    <img src="img/cirrus.jpg" alt="wispy cirrus clouds">
+                    <p>Store your <strong>cirrus</strong> clouds with us! No cloud too cold, no cloud too high.</p>
+                </div>
+                <div class="info-card">
+                    <img src="img/cumulonimbus.jpg" alt="cumulonimbus storm clouds">
+                    <p>Your <strong>cumulonimbus</strong> clouds keep their charge in our cloud storage.</p>
+                </div>
+                <div class="info-card">
+                    <img src="img/stratus.jpg" alt="stratus cloud layers">
+                    <p>We pack your <strong>stratus</strong> clouds in neat layers with our wrinkle-free guarantee.</p>
+                </div>
             </div>
         </section>
         <section id="testimonial">
