--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
             </div>
         </section>
         <section id="testimonial">
-
+            <div class="quote-wrapper">
+                <p class="quote">
+                    Thanks to CloudBox, I can work from anywhere. And their storage density is unbelievable!
+                    I don't know how I ever did it without them.
+                </p>
+                <p class="speaker">-Thor, God of Thunder</p>
+            </div>
         </section>
         <section id="sign-up">
         </section>
