Write Sign Up section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
             </div>
         </section>
         <section id="sign-up">
+            <div class="call-to-action">
+                <div class="call-wrapper">
+                    <h2>Get CloudBox now!</h2>
+                    <p>Store your clouds to use anytime, anywhere.</p>
+                </div>
+                <button class="sign-up-button">Sign Up</button>
+            </div>
         </section>
     </main>
     <footer>
